--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -1,3 +1,5 @@
+"app_motto"="Te busco - me encuentras";
+
 "login_title"="BIENVENIDO";
 "login_btn_facebook"="Entrar con Facebook";
 "login_btn_email"="Entrar con email";
