--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -3,3 +3,5 @@
 "login_title"="BIENVENIDO";
 "login_btn_facebook"="Entrar con Facebook";
 "login_btn_email"="Entrar con email";
+
+"profile_title"="Mi Perfil";
