--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -9,3 +9,4 @@
 "profile_alert_button_cancel"="Cancelar";
 "profile_alert_button_library"="Rollo fotografico";
 "profile_alert_button_camera"="Camara";
+"profile_name_placeholder"="Tu nombre";
