--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -10,3 +10,5 @@
 "profile_alert_button_library"="Rollo fotografico";
 "profile_alert_button_camera"="Camara";
 "profile_name_placeholder"="Tu nombre";
+
+"employee_title"="Busco chamba";
