--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -12,3 +12,4 @@
 "profile_name_placeholder"="Tu nombre";
 
 "employee_title"="Busco chamba";
+"employee_title_inside"="Crea tu perfil para buscar chamba";
