--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -12,4 +12,5 @@
 "profile_name_placeholder"="Tu nombre";
 
 "employee_title"="Busco chamba";
-"employee_title_inside"="Crea tu perfil para buscar chamba";
+"employee_title_inside"="Tu perfil para buscar chamba";
+"employee_item_academics_title"="ESCOLARIDAD";
