--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -19,3 +19,4 @@
 "employee_item_academics_item_bachelor"="Licenciatura";
 "employee_item_academics_item_postgraduate"="Posgrado";
 "employee_item_academics_item_other"="Otro";
+"employee_item_skills_title"="PROFESIÓN / OFICIO";
