--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -22,6 +22,8 @@
 "employee_item_skill_title"="PROFESIÓN / OFICIO";
 "employee_item_skill_noskill"="Elije uno";
 
+"employeeskill_title"="Profesión / Oficio";
+
 "skill_cat_profession_name"="Profesión";
 "skill_cat_trade_name"="Oficio";
 
