--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -34,3 +34,4 @@
 "skill_guard_name"="Guardia";
 "skill_mecanic_name"="Mecanico";
 "skill_professor_name"="Profesor";
+"skill_plumber_name"="Plomero";
