--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -32,6 +32,7 @@
 "skill_doctor_name"="Doctor";
 "skill_driver_name"="Chofer";
 "skill_guard_name"="Guardia";
+"skill_lawyer_name"="Abogado";
 "skill_mecanic_name"="Mecanico";
 "skill_personalassistant_name"="Secretaria";
 "skill_plumber_name"="Plomero";
