--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -28,6 +28,7 @@
 "skill_cat_trade_name"="Oficio";
 
 "skill_accountant_name"="Contador";
+"skill_caretaker_name"="Encargado de limpieza";
 "skill_carpenter_name"="Carpintero";
 "skill_designer_name"="Diseñador";
 "skill_doctor_name"="Doctor";
