--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "skill_babysitter_name"="Niñera";
 "skill_caretaker_name"="Encargado de limpieza";
 "skill_carpenter_name"="Carpintero";
+"skill_chef_name"="Chef";
 "skill_designer_name"="Diseñador";
 "skill_doctor_name"="Doctor";
 "skill_driver_name"="Chofer";
