--- a/chimichamba/langteq/en.lproj/Localizable.strings
+++ b/chimichamba/langteq/en.lproj/Localizable.strings
@@ -30,6 +30,8 @@
 
 "employeeskill_search_placeholder"="Profesión/Oficio";
 
+"employeedescr_button_save"="Guardar";
+
 "skill_cat_profession_name"="Profesión";
 "skill_cat_trade_name"="Oficio";
 
